frontend styling; keycloak issues